<resources>
    <string name="app_name">NoteKepper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Manh Hung</string>
    <string name="nav_header_subtitle">dm@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="description_img_course">img_course</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_gallery">Courses</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="textview">TextView</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="send_as_email">Send as email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="note_title_hint">Note title</string>
    <string name="note_text_hint">Note text</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Your name</string>

    <string name="tittle_favourite_social">Favourite social network</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_email_address">Email address</string>
    <string name="default_email_address">email@gmail.com</string>
    <string name="default_favourite_social_network">facebook.com</string>
    <string name="general_pref">General</string>
</resources>